@@ -14,21 +14,6 @@ use FindBin;
 use lib "$FindBin::Bin/default/lib";
 
 {
-  my $library_path = 'spvm_build/exe';
-  {
-    # macOS
-    if ($^O eq 'darwin') {
-      $ENV{DYLD_LIBRARY_PATH} = $library_path;
-    }
-    else {
-      # Windows MinGW
-      $ENV{LIBRARY_PATH} = $library_path;
-    
-      # Linux, macOS
-      $ENV{LD_LIBRARY_PATH} = $library_path;
-    }
-  }
-  
   $ENV{PERL5LIB} = "blib/arch$Config{path_sep}blib/lib";
   $ENV{PATH} = "blib/script$Config{path_sep}$ENV{PATH}";
   
